--- a/LBW/Views/Inicio/Bienvenida.cshtml
+++ b/LBW/Views/Inicio/Bienvenida.cshtml
@@ -67,9 +67,9 @@
                 <div class="row align-items-center">
                     <div class="col-10">
                         <div class="markdown" style="margin-top: -10px;">
-                            <p><strong>@User.Identity.Name,</strong> Bienvenido a Labware</p>
-                            <p>Nuestra innovadora plataforma de gestión de laboratorio diseñada para optimizar los procesos en Minera Barrick Pierina. Con una interfaz intuitiva, LIMS GOSoft automatiza y simplifica la gestión de muestras y resultados de análisis en laboratorio de análisis minero.</p>
-                            <p>LIMS GOSoft te ayuda a cumplir con las normativas importantes del sector minero, incluyendo las Buenas Prácticas de Laboratorio (BPL). Optimizamos los procesos de análisis de minerales, control de calidad y seguimiento de muestras, permitiéndote tomar decisiones informadas y mejorar la productividad. </p>
+                            <p><strong>@User.Identity.Name,</strong> Bienvenido a LIMS GoSoft</p>
+                            <p>Nuestra innovadora plataforma de gestión de laboratorio diseñada para optimizar los procesos en Minera Barrick Pierina. Con una interfaz intuitiva, LIMS GoSoft automatiza y simplifica la gestión de muestras y resultados de análisis en laboratorio de análisis minero.</p>
+                            <p>LIMS GoSoft te ayuda a cumplir con las normativas importantes del sector minero, incluyendo las Buenas Prácticas de Laboratorio (BPL). Optimizamos los procesos de análisis de minerales, control de calidad y seguimiento de muestras, permitiéndote tomar decisiones informadas y mejorar la productividad. </p>
                         </div>
                     </div>
                 </div>
@@ -78,3 +78,4 @@
     </div>
 </div>
 
+ 
